--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="splash_background">#ffffff</color>
+    <color name="text_color">#000000</color>
+    <color name="splash_text">#ff1744</color>
+    <color name="developed_text">#616161</color>
 </resources>
