--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#FFD600</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="splash_background">#ffffff</color>
-    <color name="splash_text">#ff1744</color>
+    <color name="splash_text">#FF1744</color>
     <color name="developed_text">#616161</color>
+    <color name="background">#FFD600</color>
+    <color name="text_color">#FFD600</color>
+    <color name="view">#212121</color>
+    <color name="score_color">#212121</color>
 </resources>
